objects/sbaa__Approval__c.object
<CustomObject>
    <customHelpPage>sbaa__ApprovalHelp</customHelpPage>
    <description>Approval by individual for specific record.</description>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Approvals</relationshipLabel>
        <relationshipName>Approvals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderItem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>OrderItem</label>
        <referenceTo>OrderItem</referenceTo>
        <relationshipLabel>Approvals</relationshipLabel>
        <relationshipName>Approvals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order_Line_Approval__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order Line Approval</label>
        <referenceTo>Order_Line_Approval__c</referenceTo>
        <relationshipLabel>Approvals</relationshipLabel>
        <relationshipName>Approvals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_AssigntoQuoteOwner__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check box to assign the approval record to the quote owner other than the default approver</description>
        <label>Assign to Quote Owner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_EstFreightPrice__c</fullName>
        <formula>OrderItem__r.PMC_CPQ_EstFreightPrice__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Freight</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_FPDPricefromPriceFx__c</fullName>
        <formula>OrderItem__r.PMC_CPQ_FPDPricefromPriceFx__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FPD List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_FPDQuoteApproval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FPD Quote Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_FinalAgreedPrice__c</fullName>
        <formula>OrderItem__r.PMC_CPQ_FinalAgreedPrice__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Final Agreed Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_Floorplusfreight__c</fullName>
        <formula>OrderItem__r.PMC_CPQ_Floorplusfreight__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Floor Price + Freight</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_Floorprice__c</fullName>
        <formula>OrderItem__r.PMC_CPQ_Floorprice__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Floor Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_Incoterms__c</fullName>
        <formula>TEXT(OrderItem__r.PMC_CPQ_Incoterms__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Incoterms</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_LastReminderTime__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Last Reminder Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_Order__c</fullName>
        <formula>OrderItem__r.Order.OrderNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_PriceVolume__c</fullName>
        <label>Price/Volume</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PMC_CPQ_PriceVolume</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_CPQ_ProductLocation__c</fullName>
        <formula>OrderItem__r.PMC_CPQ_ProductLocation__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_Product_Family__c</fullName>
        <formula>OrderItem__r.Product_Family__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Family</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_Product__c</fullName>
        <formula>OrderItem__r.Product2.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_Quantity__c</fullName>
        <formula>OrderItem__r.Quantity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_QuoteExpirationDate__c</fullName>
        <description>This field is created as part of User Story to store Quote&apos;s Expiration Date/Time</description>
        <formula>Quote__r.PMC_CPQ_ExpiresOn__c</formula>
        <label>Quote Expiration Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_QuoteHotQuote__c</fullName>
        <formula>Quote__r.PMC_CPQ_HotQuote__c</formula>
        <label>Quote Hot Quote</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_ReminderFrequency__c</fullName>
        <label>Reminder Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1 Hour</fullName>
                </value>
                <value>
                    <fullName>2 Hours</fullName>
                </value>
                <value>
                    <fullName>4 Hours</fullName>
                </value>
                <value>
                    <fullName>8 Hours</fullName>
                </value>
                <value>
                    <fullName>0.166667 hrs(10 mins)</fullName>
                </value>
                <value>
                    <fullName>0.083333 hrs(5 mins)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_CPQ_ReminderSetCheck2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reminder Set Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_ReminderSetCheck__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reminder Set Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_SoldtoAccount__c</fullName>
        <formula>OrderItem__r.PMC_CPQ_SoldtoAccount__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sold to</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_SubmitterComments__c</fullName>
        <description>This field is created to display comments on Approval record page entered by Submitter.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Submitter Comments</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_TaskFormulaCheck__c</fullName>
        <formula>OR( 
ISPICKVAL(PMC_CPQ_ReminderFrequency__c,&apos;1 Hour&apos;),
ISPICKVAL(PMC_CPQ_ReminderFrequency__c,&apos;2 Hours&apos;),
ISPICKVAL(PMC_CPQ_ReminderFrequency__c,&apos;4 Hours&apos;),
ISPICKVAL(PMC_CPQ_ReminderFrequency__c,&apos;8 Hours&apos;)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Task Formula Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QuoteLine__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote Line</label>
        <referenceTo>SBQQ__QuoteLine__c</referenceTo>
        <relationshipLabel>Approvals</relationshipLabel>
        <relationshipName>Approvals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote</label>
        <referenceTo>SBQQ__Quote__c</referenceTo>
        <relationshipLabel>Approvals (Quote)</relationshipLabel>
        <relationshipName>Approvals1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>creation_time__c</fullName>
        <formula>DATETIMEVALUE( CreatedDate )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>creation time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>sbaa__Actions__c</fullName>
        <formula>HYPERLINK( &quot;/apex/sbaa__Approve?id=&quot; &amp; Id, $Label.sbaa__lbl_approve, &quot;_self&quot;) + &quot; | &quot; + HYPERLINK( &quot;/apex/sbaa__Reject?id=&quot; &amp; Id, $Label.sbaa__lbl_reject, &quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actions</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sbaa__ApprovalChain__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Approval Chain to which this Approval belongs</description>
        <inlineHelpText>Approval Chain to which this Approval belongs</inlineHelpText>
        <label>Approval Chain</label>
        <referenceTo>sbaa__ApprovalChain__c</referenceTo>
        <relationshipLabel>Approvals</relationshipLabel>
        <relationshipName>Approvals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sbaa__ApprovalStep__c</fullName>
        <description>Step (level) at which this approval is required.</description>
        <inlineHelpText>Step (level) at which this approval is required.</inlineHelpText>
        <label>Approval Step</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sbaa__ApprovalTemplateId__c</fullName>
        <description>ID of the Email Template associated with Approval</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>ID of the Email Template associated with Approval</inlineHelpText>
        <label>Approval Template Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sbaa__ApprovedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User who approved this Approval</description>
        <inlineHelpText>User who approved this Approval</inlineHelpText>
        <label>Approved By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ApprovedApprovals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sbaa__ApproverField__c</fullName>
        <description>Used with Dynamic Approvers, to capture the field name containing the Approver value</description>
        <inlineHelpText>Used with Dynamic Approvers, to capture the field name containing the Approver value</inlineHelpText>
        <label>Approver Field</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Created By</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sbaa__Approver__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Lookup to the Approver associated with this Approval.</description>
        <inlineHelpText>Lookup to the Approver associated with this Approval.</inlineHelpText>
        <label>Approver</label>
        <referenceTo>sbaa__Approver__c</referenceTo>
        <relationshipLabel>Approvals</relationshipLabel>
        <relationshipName>Approvals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sbaa__Archived__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When Archived Approvals is enabled, indicates that this Approval is archived</description>
        <inlineHelpText>When Archived Approvals is enabled, indicates that this Approval is archived</inlineHelpText>
        <label>Archived</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sbaa__AssignedGroupId__c</fullName>
        <description>ID of the Group the Approval is assigned to, if applicable</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>ID of the Group the Approval is assigned to, if applicable</inlineHelpText>
        <label>Assigned Group Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sbaa__AssignedToMe__c</fullName>
        <description>True if the current User is also the Assigned To User</description>
        <formula>sbaa__AssignedTo__r.Id = $User.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>True if the current User is also the Assigned To User</inlineHelpText>
        <label>Assigned To Me</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sbaa__AssignedTo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the User to which the Approval is assigned</description>
        <inlineHelpText>Lookup to the User to which the Approval is assigned</inlineHelpText>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Approvals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sbaa__CommentsLong__c</fullName>
        <description>Approver&apos;s Comments</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Approver&apos;s Comments</inlineHelpText>
        <label>Comments</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sbaa__DelegatedApprover__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>If Delegated Approvals is enabled, lookup to the delegated Approver</description>
        <inlineHelpText>If Delegated Approvals is enabled, lookup to the delegated Approver</inlineHelpText>
        <label>Delegated Approver</label>
        <referenceTo>sbaa__Approver__c</referenceTo>
        <relationshipLabel>Delegated Approvals</relationshipLabel>
        <relationshipName>DelegatedApprovals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sbaa__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Opportunity being approved</description>
        <inlineHelpText>Opportunity being approved</inlineHelpText>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Approvals</relationshipLabel>
        <relationshipName>Approvals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sbaa__RecallTemplateId__c</fullName>
        <description>ID of the Email Template associated with Recalls</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>ID of the Email Template associated with Recalls</inlineHelpText>
        <label>Recall Template Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sbaa__RecordField__c</fullName>
        <description>API Name of the Approval field looking up to the record being approved</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>API Name of the Approval field looking up to the record being approved</inlineHelpText>
        <label>Record Field</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sbaa__RejectedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User who rejected this Approval</description>
        <inlineHelpText>User who rejected this Approval</inlineHelpText>
        <label>Rejected By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>RejectedApprovals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sbaa__RejectionTemplateId__c</fullName>
        <description>ID of the Email Template associated with Rejection</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>ID of the Email Template associated with Rejection</inlineHelpText>
        <label>Rejection Template Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sbaa__RequestTemplateId__c</fullName>
        <description>ID of the Email Template associated with Approval Requests</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>ID of the Email Template associated with Approval Requests</inlineHelpText>
        <label>Request Template Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sbaa__RequireExplicitApproval__c</fullName>
        <defaultValue>false</defaultValue>
        <description>By default, approving any Approval will auto-approve all other Approvals assigned to the same User. If this box is checked, an Approval originated by this Rule will not be auto-approved and must be explicitly approved.</description>
        <inlineHelpText>By default, approving any Approval will auto-approve all other Approvals assigned to the same User. If this box is checked, an Approval originated by this Rule will not be auto-approved and must be explicitly approved.</inlineHelpText>
        <label>Require Explicit Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sbaa__Rule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Approval rule that generated this approval.</description>
        <inlineHelpText>Approval rule that generated this approval.</inlineHelpText>
        <label>Rule</label>
        <referenceTo>sbaa__ApprovalRule__c</referenceTo>
        <relationshipLabel>Approvals</relationshipLabel>
        <relationshipName>Approvals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sbaa__Status__c</fullName>
        <description>Status of this approval.</description>
        <inlineHelpText>Status of this approval.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Assigned</fullName>
                    <default>true</default>
                    <label>Assigned</label>
                </value>
                <value>
                    <fullName>Requested</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Revoked</fullName>
                </value>
                <value>
                    <fullName>Recalled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sbaa__Unanimous__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If Approver is a Group, checked if all members need to Approve in order to consider the Approval approved</description>
        <inlineHelpText>If Approver is a Group, checked if all members need to Approve in order to consider the Approval approved</inlineHelpText>
        <label>Unanimous</label>
        <type>Checkbox</type>
    </fields>
    <label>Approval</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Quote__c</columns>
        <columns>sbaa__Approver__c</columns>
        <columns>sbaa__Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>PMC_CPQ_QuoteExpirationDate__c</columns>
        <columns>PMC_CPQ_PriceVolume__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>FPD_Approval_Requests</fullName>
        <columns>NAME</columns>
        <columns>PMC_CPQ_Order__c</columns>
        <columns>OrderItem__c</columns>
        <columns>PMC_CPQ_SoldtoAccount__c</columns>
        <columns>PMC_CPQ_Incoterms__c</columns>
        <columns>PMC_CPQ_Product_Family__c</columns>
        <columns>PMC_CPQ_Product__c</columns>
        <columns>PMC_CPQ_ProductLocation__c</columns>
        <columns>PMC_CPQ_Floorplusfreight__c</columns>
        <columns>PMC_CPQ_FinalAgreedPrice__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>sbaa__RecordField__c</field>
            <operation>contains</operation>
            <value>Order_Line_Approval__c</value>
        </filters>
        <filters>
            <field>sbaa__Status__c</field>
            <operation>equals</operation>
            <value>Requested</value>
        </filters>
        <label>FPD Approval Requests</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Order_Line_Item_Details</fullName>
        <columns>NAME</columns>
        <columns>PMC_CPQ_FinalAgreedPrice__c</columns>
        <columns>PMC_CPQ_Floorprice__c</columns>
        <columns>PMC_CPQ_Floorplusfreight__c</columns>
        <columns>PMC_CPQ_FPDPricefromPriceFx__c</columns>
        <columns>PMC_CPQ_FPDQuoteApproval__c</columns>
        <columns>PMC_CPQ_Incoterms__c</columns>
        <columns>PMC_CPQ_Product__c</columns>
        <columns>PMC_CPQ_Product_Family__c</columns>
        <columns>PMC_CPQ_ProductLocation__c</columns>
        <columns>PMC_CPQ_Quantity__c</columns>
        <columns>PMC_CPQ_SoldtoAccount__c</columns>
        <filterScope>Everything</filterScope>
        <label>Order Line Item Details</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>PMC_CPQ_AllFPDApprovals</fullName>
        <columns>NAME</columns>
        <columns>PMC_CPQ_Order__c</columns>
        <columns>OrderItem__c</columns>
        <columns>PMC_CPQ_SoldtoAccount__c</columns>
        <columns>PMC_CPQ_Incoterms__c</columns>
        <columns>PMC_CPQ_Product_Family__c</columns>
        <columns>PMC_CPQ_Product__c</columns>
        <columns>PMC_CPQ_ProductLocation__c</columns>
        <columns>PMC_CPQ_Floorplusfreight__c</columns>
        <columns>PMC_CPQ_FinalAgreedPrice__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PMC_CPQ_FPDQuoteApproval__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All FPD Approvals</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>PMC_CPQ_AllHotQuotesApprovals</fullName>
        <columns>NAME</columns>
        <columns>Quote__c</columns>
        <columns>sbaa__Approver__c</columns>
        <columns>sbaa__Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>PMC_CPQ_QuoteExpirationDate__c</columns>
        <columns>PMC_CPQ_PriceVolume__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PMC_CPQ_QuoteHotQuote__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Hot Quotes Approvals</label>
    </listViews>
    <listViews>
        <fullName>PMC_CPQ_AllPriceApprovals</fullName>
        <columns>NAME</columns>
        <columns>Quote__c</columns>
        <columns>sbaa__Approver__c</columns>
        <columns>sbaa__Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>PMC_CPQ_QuoteExpirationDate__c</columns>
        <columns>PMC_CPQ_PriceVolume__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PMC_CPQ_PriceVolume__c</field>
            <operation>equals</operation>
            <value>Price,Price and Volume</value>
        </filters>
        <label>All Price Approvals</label>
    </listViews>
    <listViews>
        <fullName>PMC_CPQ_AllVolumeApprovals</fullName>
        <columns>NAME</columns>
        <columns>Quote__c</columns>
        <columns>sbaa__Approver__c</columns>
        <columns>sbaa__Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>PMC_CPQ_QuoteExpirationDate__c</columns>
        <columns>PMC_CPQ_PriceVolume__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PMC_CPQ_PriceVolume__c</field>
            <operation>equals</operation>
            <value>Volume,Price and Volume</value>
        </filters>
        <label>All Volume Approvals</label>
    </listViews>
    <listViews>
        <fullName>PMC_CPQ_MyApprovals</fullName>
        <columns>NAME</columns>
        <columns>Quote__c</columns>
        <columns>sbaa__Approver__c</columns>
        <columns>sbaa__Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>PMC_CPQ_QuoteExpirationDate__c</columns>
        <columns>PMC_CPQ_PriceVolume__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Approvals</label>
    </listViews>
    <nameField>
        <displayFormat>A-{00000}</displayFormat>
        <label>Approval #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Approvals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>FRTest</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
AND(
ISPICKVAL(Quote__r.PMC_CPQ_Region__c,&apos;Brazil&apos;) ,NOT(ISPICKVAL(Quote__r.PMC_CPQ_QuoteRecordSubType__c,&apos;B2B - Fertilizer&apos;)),NOT(ISPICKVAL(Quote__r.PMC_CPQ_QuoteRecordSubType__c,&apos;B2B - Potash&apos;))),
AND(
(Quote__r.PMC_CPQ_QuoteOrigin__c==&apos;DH Request&apos;),
OR(ISBLANK(QuoteLine__r.PMC_CPQ_EstFreightPrice__c),
QuoteLine__r.PMC_CPQ_EstFreightPrice__c&lt;=0)
))</errorConditionFormula>
        <errorDisplayField>sbaa__ApprovalChain__c</errorDisplayField>
        <errorMessage>Go to edit lines and enter freight value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PMC_CPQ_QuoteSubmissionNoBeyondFriday5PM</fullName>
        <active>false</active>
        <description>This validation will prevent approval record from getting created when quote is submitted after friday 5pm</description>
        <errorConditionFormula>AND(
NOT($Setup.PMC_ProcessSwitches__c.PMC_BypassValidationRule__c),
ISNEW(),
WEEKDAY( DATEVALUE( CreatedDate ) ) = 3,
HOUR( TIMEVALUE(CreatedDate) ) &gt;= 17
)</errorConditionFormula>
        <errorMessage>Cannot Submit Quote for Approval after Friday 5 PM !!!</errorMessage>
    </validationRules>
</CustomObject>